--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -73,7 +73,7 @@ table td{
 }
 
 .Box {
-    background-color: $dark-grey;;
+    background-color: $dark-grey !important;
     border: 1px #e1e4e8 solid;
     border-radius: 6px;
 }
